--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
             <br><br><br>
             <div id="camera"></div>
             <button id="snapshot_button" onclick="take_snapshot()"><i class="fa fa-camera" style="color: grey; font-size: 50px;"></i></button>
-            <br><br><br><br>
+            <br><br>
             <div id="picture"></div>
+            <div style="background-color: white; border-radius: 10px; width: 30%;">
+                <p style="color: black; font-size: 35px;"> ᴏʙᴊᴇᴄᴛ: &nbsp; <span id="result_object"></span></p>
+                <p style="color: black; font-size: 35px;"> ᴀᴄᴄᴜʀᴀᴄʏ: &nbsp;<span id="result_accuracy"></span></p>
+                <ul> ꜱᴜᴘᴘᴏʀᴛᴇᴅ ɢᴇꜱᴛᴜʀᴇꜱ:
+                    <li> ᴛʜᴜᴍʙꜱ ᴜᴘ </li>
+                    <li> ᴛʜᴜᴍʙꜱ ᴅᴏᴡɴ </li>
+                    <li> ꜰᴏʟᴅᴇᴅ ʜᴀɴᴅꜱ </li>
+                    <li> ɢʀᴇᴀᴛ </li>
+                    <li> ᴄʀᴏꜱꜱᴇᴅ ꜰɪɴɢᴇʀꜱ </li>
+                </ul>
+                <br><br>
+            </div>
         </center>
+
+        <br><br><br>
 
         <div class="footer">
             <p> Author: Tusti Gupta </p>
